refactor: contact e contact association.